# market-trading

./: CMakeLists.txt  README.md  todo.md
include/: DataProcessingEngine.h  MarketDataFeedHandler.h  MovingAverageCrossoverStrategy.h  OrderExecutionEngine.h  RiskManagementModule.h  TradingStrategy.h
include/market_data/: MarketDataHandler.hpp
include/networking/: Client.hpp  Server.hpp
include/order_matching/: Matcher.hpp  Order.hpp  OrderBook.hpp
src/: CMakeLists.txt  DataProcessingEngine.cpp  MarketDataFeedHandler.cpp  MovingAverageCrossoverStrategy.cpp  OrderExecutionEngine.cpp  RiskManagementModule.cpp  main.cpp
src/market_data/: MarketDataHandler.cpp
src/networking/: Client_main.cpp  Server_main.cpp  client.cpp  server.cpp
src/order_matching/: Matcher.cpp  OrderBook.cpp
